crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT001_parentheses.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT001 [*] Use `@pytest.fixture()` over `@pytest.fixture`
  --> PT001.py:9:1
   |
 9 | @pytest.fixture
   | ^^^^^^^^^^^^^^^
10 | def no_parentheses():
11 |     return 42
   |
help: Add parentheses
  |
9 | @pytest.fixture()
  |                ++

PT001 [*] Use `@pytest.fixture()` over `@pytest.fixture`
  --> PT001.py:34:1
   |
34 | @fixture
   | ^^^^^^^^
35 | def imported_from_no_parentheses():
36 |     return 42
   |
help: Add parentheses
   |
34 | @fixture()
   |         ++

PT001 [*] Use `@pytest.fixture()` over `@pytest.fixture`
  --> PT001.py:59:1
   |
59 | @aliased
   | ^^^^^^^^
60 | def aliased_no_parentheses():
61 |     return 42
   |
help: Add parentheses
   |
59 | @aliased()
   |         ++
