crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT002.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT002 Configuration for fixture `my_fixture` specified via positional args, use kwargs
  --> PT002.py:14:1
   |
14 | @pytest.fixture("module")
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PT002 Configuration for fixture `my_fixture` specified via positional args, use kwargs
  --> PT002.py:19:1
   |
19 | @pytest.fixture("module", autouse=True)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
