crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT007_tuple_of_tuples.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:23:9
   |
21 |     ("param1", "param2"),
22 |     (
23 |         [1, 2],
   |         ^^^^^^
24 |         [3, 4],
25 |     ),
   |
help: Use `tuple` of `tuple` for parameter values
   |
23 -         [1, 2],
23 +         (1, 2),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:24:9
   |
22 |     (
23 |         [1, 2],
24 |         [3, 4],
   |         ^^^^^^
25 |     ),
26 | )
   |
help: Use `tuple` of `tuple` for parameter values
   |
24 -         [3, 4],
24 +         (3, 4),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple`
  --> PT007.py:31:35
   |
31 | @pytest.mark.parametrize("param", [1, 2])
   |                                   ^^^^^^
32 | def test_list(param):
33 |     ...
   |
help: Use `tuple` for parameter values
   |
31 - @pytest.mark.parametrize("param", [1, 2])
31 + @pytest.mark.parametrize("param", (1, 2))
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:38:5
   |
36 |   @pytest.mark.parametrize(
37 |       ("param1", "param2"),
38 | /     [
39 | |         (1, 2),
40 | |         (3, 4),
41 | |     ],
   | |_____^
42 |   )
43 |   def test_list_of_tuples(param1, param2):
   |
help: Use `tuple` of `tuple` for parameter values
   |
38 ~     (
39 |         (1, 2),
40 |         (3, 4),
41 ~     ),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:49:5
   |
47 |   @pytest.mark.parametrize(
48 |       ("param1", "param2"),
49 | /     [
50 | |         [1, 2],
51 | |         [3, 4],
52 | |     ],
   | |_____^
53 |   )
54 |   def test_list_of_lists(param1, param2):
   |
help: Use `tuple` of `tuple` for parameter values
   |
49 ~     (
50 |         [1, 2],
51 |         [3, 4],
52 ~     ),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:50:9
   |
48 |     ("param1", "param2"),
49 |     [
50 |         [1, 2],
   |         ^^^^^^
51 |         [3, 4],
52 |     ],
   |
help: Use `tuple` of `tuple` for parameter values
   |
50 -         [1, 2],
50 +         (1, 2),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:51:9
   |
49 |     [
50 |         [1, 2],
51 |         [3, 4],
   |         ^^^^^^
52 |     ],
53 | )
   |
help: Use `tuple` of `tuple` for parameter values
   |
51 -         [3, 4],
51 +         (3, 4),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:60:5
   |
58 |   @pytest.mark.parametrize(
59 |       "param1,param2",
60 | /     [
61 | |         [1, 2],
62 | |         [3, 4],
63 | |     ],
   | |_____^
64 |   )
65 |   def test_csv_name_list_of_lists(param1, param2):
   |
help: Use `tuple` of `tuple` for parameter values
   |
60 ~     (
61 |         [1, 2],
62 |         [3, 4],
63 ~     ),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:61:9
   |
59 |     "param1,param2",
60 |     [
61 |         [1, 2],
   |         ^^^^^^
62 |         [3, 4],
63 |     ],
   |
help: Use `tuple` of `tuple` for parameter values
   |
61 -         [1, 2],
61 +         (1, 2),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
  --> PT007.py:62:9
   |
60 |     [
61 |         [1, 2],
62 |         [3, 4],
   |         ^^^^^^
63 |     ],
64 | )
   |
help: Use `tuple` of `tuple` for parameter values
   |
62 -         [3, 4],
62 +         (3, 4),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple`
  --> PT007.py:71:5
   |
69 |   @pytest.mark.parametrize(
70 |       "param",
71 | /     [
72 | |         [1, 2],
73 | |         [3, 4],
74 | |     ],
   | |_____^
75 |   )
76 |   def test_single_list_of_lists(param):
   |
help: Use `tuple` for parameter values
   |
71 ~     (
72 |         [1, 2],
73 |         [3, 4],
74 ~     ),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple`
  --> PT007.py:80:31
   |
80 | @pytest.mark.parametrize("a", [1, 2])
   |                               ^^^^^^
81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82 | @pytest.mark.parametrize("d", [3,])
   |
help: Use `tuple` for parameter values
   |
80 - @pytest.mark.parametrize("a", [1, 2])
80 + @pytest.mark.parametrize("a", (1, 2))
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple`
  --> PT007.py:82:31
   |
80 | @pytest.mark.parametrize("a", [1, 2])
81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82 | @pytest.mark.parametrize("d", [3,])
   |                               ^^^^
83 | @pytest.mark.parametrize(
84 |     "d",
   |
help: Use `tuple` for parameter values
   |
82 - @pytest.mark.parametrize("d", [3,])
82 + @pytest.mark.parametrize("d", (3,))
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple`
  --> PT007.py:85:5
   |
83 | @pytest.mark.parametrize(
84 |     "d",
85 |     [("3", "4")],
   |     ^^^^^^^^^^^^
86 | )
87 | @pytest.mark.parametrize(
   |
help: Use `tuple` for parameter values
   |
85 -     [("3", "4")],
85 +     (("3", "4"),),
   |
note: This is an unsafe fix and may change runtime behavior

PT007 [*] Wrong values type in `pytest.mark.parametrize` expected `tuple`
  --> PT007.py:89:5
   |
87 | @pytest.mark.parametrize(
88 |     "e",
89 |     [("3", "4"),],
   |     ^^^^^^^^^^^^^
90 | )
91 | def test_multiple_decorators(a, b, c, d, e):
   |
help: Use `tuple` for parameter values
   |
89 -     [("3", "4"),],
89 +     (("3", "4"),),
   |
note: This is an unsafe fix and may change runtime behavior
